# latent-diffusion-conditioned

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: generate.py  train.py
src/evaluation/: metrics.py
src/models/: __init__.py  diffusion.py  text_encoder.py  unet.py  vae.py
src/training/: trainer.py
tests/: test_unet.py
